Update to Java 21 + bug fixes