@@ -2,10 +2,11 @@
 package chatty.util.api;
 
 import chatty.util.JSONUtil;
-import java.util.logging.Logger;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 import org.json.simple.parser.JSONParser;
+
+import java.util.logging.Logger;
 
 /**
  *
@@ -30,14 +31,14 @@ public class SendMessageResult {
             JSONParser parser = new JSONParser();
             JSONObject root = (JSONObject) parser.parse(json);
             JSONArray data = (JSONArray) root.get("data");
-            JSONObject actualData = (JSONObject) data.get(0);
+            JSONObject actualData = (JSONObject) data.getFirst();
             String msgId = JSONUtil.getString(actualData, "message_id");
             boolean isOk = JSONUtil.getBoolean(actualData, "is_sent", false);
             JSONObject dropReason = (JSONObject) actualData.get("drop_reason");
             String dropCode = null;
             String dropMessage = null;
             if (dropReason != null) {
-                dropCode = JSONUtil.getString(dropReason, "code");
+                JSONUtil.getString(dropReason, "code");
                 dropMessage = JSONUtil.getString(dropReason, "message");
             }
             return new SendMessageResult(isOk, msgId, dropMessage);
